tests/NormalTests/paczka2/big_fuzzy/69662353.err
Error in line 3: lF47zmEw0i A540 79,4
Error in line 4: lF47zmEw0i S592 89,2
Error in line 8: h91PZZJ S132 0,0
Error in line 17: imLa8 S592 97,7
Error in line 23: ykPkWLgs S592 38,8
Error in line 22: imLa8 S132 49,3
Error in line 26: ykPkWLgs S216 51,0
Error in line 29: ykPkWLgs S592 47,81
Error in line 28: ykPkWLgs A540 67,9
Error in line 38: h91PZZJ A540 215,6
Error in line 44: lF47zmEw0i S132 83,0
Error in line 46: zqe S592 29,8
Error in line 47: lF47zmEw0i S592 92,1
Error in line 56: lF47zmEw0i S216 98,7
Error in line 61: fL2gWppz S592 88,0
Error in line 71: ykPkWLgs S592 19,3
Error in line 79: S132 A540 60,1
Error in line 50: imLa8 S592 78,1
Error in line 84: zqe A540 35,9
Error in line 85: ykPkWLgs S216 35,6
Error in line 93: imLa8 A540 -1,4
Error in line 83: imLa8 A540 10,1
Error in line 97: h91PZZJ A540 56,0
Error in line 98: ykPkWLgs A540 6,4
Error in line 103: h91PZZJ A50 53,2
Error in line 101: zqe A540 58,8
Error in line 110: zqe S216 19,9
Error in line 116: S132 S216 12,4
Error in line 121: S132 A540 33,8
Error in line 130: zqe S132 7,6
Error in line 135: ykPkWLgs S132 134,7
Error in line 162: lF47zmEw0i S132 7,1
Error in line 166: lF47zmEw0i A540 61,4
Error in line 167: h91PZZJ A540 95,8
Error in line 175: h91PZZJ S592 28,4
Error in line 172: lF47zmEw0i S592 32,9
Error in line 186: ykPkWLgs S216 2,2
Error in line 177: fL2gWppz A540 103,0
Error in line 200: fL2gWppz S216 96,0
Error in line 198: zqe S592 85,6
Error in line 214: ykPkWLgs S132 68,5
Error in line 237: fL2gWppz S592 27,7
